Add new Feature

--- a/index.html
+++ b/index.html
@@ -16,7 +16,30 @@
     </nav>
   </header>
   <main id="main">
+    <section id="list-of-exercises-c">
+      <form>
+        <label>
+          Назва вправи
+          <input type="text" id="ex-name">
+        </label>
+        <label>
+          Опис
+          <textarea id="ex-desc" rows="3"></textarea>
+        </label>
+        <button id="btn">Додати</button>
+
+        
+      </form>
+      <ul id="ex-list"></ul>
+    </section>
+    <section id="create-workout-c">
+      e2
+    </section>
+    <section id="workout-c">
+      e3
+    </section>
   </main> 
-  <script src="app.js" ></script>
+  <!-- <script src="app.js" ></script> -->
+  <script src="a.js"></script>
 </body>
 </html>
