--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
   </header>
   <main id="main">
     <section id="list-of-exercises-c">
-      <form>
-        <label>
+      <form class="flex flex-d-c">
+        <label class="name_label flex flex-d-c">
           Назва вправи
           <input type="text" id="ex-name" class="exercises-name">
         </label>
-        <label>
+        <label class="description flex flex-d-c">
           Опис
           <textarea id="ex-desc" class="exercises-ds"cols="20" rows="5"></textarea>
         </label>
